--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A set of VSTS tasks for building React Native apps.",
   "author": "Microsoft",
   "license": "MIT",
-  "dependencies": {
-    "q": "^1.4.1"
-   }
+  "devDependencies": {
+    "command-line-args": "^2.1.4",
+    "shelljs": "^0.6.0"
+  }
 }
