Switched to vsts-task-lib (version 0.5.10 currently)

--- a/Tasks/ReactNativePrepare/package.json
+++ b/Tasks/ReactNativePrepare/package.json
@@ -9,6 +9,6 @@
     "minimatch": "^2.0.10",
     "q": "^1.4.1",
     "semver": "^5.1.0",
-    "vso-task-lib": "^0.5.5"
+    "vsts-task-lib": "^0.5.10"
   }
 }
