--- a/Tasks/ReactNativeBundle/package.json
+++ b/Tasks/ReactNativeBundle/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "glob": "^6.0.1",
     "minimatch": "^2.0.10",
-    "q":"^1.4.1",
+    "q": "^1.4.1",
     "semver": "^5.1.0",
-    "vso-task-lib": "^0.5.5"
+    "vsts-task-lib": "^0.5.10"
   }
 }
