--- a/Tasks/ReactNativePrepare/package.json
+++ b/Tasks/ReactNativePrepare/package.json
@@ -4,6 +4,10 @@
   "description": "A VSTS build task for preparing React Native projects to build.",
   "author": "Microsoft",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/vsts-react-native-tasks.git"
+  },  
   "dependencies": {
     "glob": "^6.0.1",
     "minimatch": "^2.0.10",
