--- a/Tasks/ReactNativePrepare/package.json
+++ b/Tasks/ReactNativePrepare/package.json
@@ -13,6 +13,6 @@
     "minimatch": "^2.0.10",
     "q": "^1.4.1",
     "semver": "^5.1.0",
-    "vsts-task-lib": "^0.5.10"
+    "vso-task-lib": "^0.5.5"
   }
 }
